--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <div class="centered-div">
     <!-- Birthday Message -->
-    <div class="birthday-message" id="birthdayMessage">Happy Birthday MARGARITA!</div>
+    <div class="birthday-message" id="birthdayMessage">SHE SO YIPPIE</div>
     <div class="Sigma-message" id="Sigma-message">So sigma no effect needed</div>
     <div id="confetti-container"></div>
     <!-- Slots Table -->
